kubernetes/app/firefly/service-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: firefly-db
  namespace: firefly
spec:
  clusterIP: None
  selector:
    app: firefly-db
  ports:
    - port: 5432
      targetPort: 5432
